<resources>
    <string name="app_name">Activity</string>
    <string name="login">登录</string>
    <string name="exit">退出</string>
    <string name="label_username">用户名：</string>
    <string name="label_password">密码：</string>
    <string name="go_back">返回</string>
    <string name="knows">知道了</string>
    <string name="search_baidu">点我访问网页</string>
    <string name="label_time">当前时间：</string>
    <string name="to_fill_username">用户名：%1$s</string>
    <string name="to_fill_password">密码：%1$s</string>
    <string name="alert_dialog_title">Data returned</string>
    <string name="alert_dialog_content">Data sent back from \'MainActivity\' is \'%1$s\'.</string>
    <string name="alert_button_text">确认</string>
    <string name="title_login">Login Activity</string>
    <string name="title_main">Main Activity</string>
</resources>